add current weather in home page
